@@ -2,6 +2,8 @@ Revision history for Perl extension Sweat
 
 {{$NEXT}}
 
+    - Adding a simple interactive mode.
+
     - Better handling of unset configuration options and connectivity problems. Thanks to grai ("sudo-batman") for the bug reports.
 
 202002100 2020-02-10T15:40:59Z
